fix: replase sass, add: switcher

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="src/sass/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,9 +23,16 @@
                         <a href="#/cards" class="menu-item">Emotions</a>
                     </ul>
                 </nav>
+                <div class="onoffswitch">
+                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                    <label class="onoffswitch-label" for="myonoffswitch">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
             </div>
             <div class="container-main">
-
+                
             </div>
         </div>
     </div>
