--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/sass/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="root">
         <div class="app-container">
@@ -31,11 +33,26 @@
                     </label>
                 </div>
             </div>
-            <div class="container-main">
-                
+            <div class="main-container">
+                <div>
+                    <a href="#/cards" class="main-card"> <img src="./src/img/draw.jpg" class="main-card__image"
+                            alt="Action (set A)"> Action (set A)</a>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img class="card-img" src="./src/img/cry.jpg" alt="cry">
+                        <p class="card-name">cry</p>
+                    </div>
+                    <div class="back">
+                        <img class="card-img" src="./src/img/cry.jpg" alt="cry">
+                        <p class="card-name">плакать</p>
+                    </div>
+                    <div class="rotate"></div>
+                </div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script src="./src/js/card.js" type="module"></script>
 </body>
+
 </html>
