--- a/index.html
+++ b/index.html
@@ -34,25 +34,10 @@
                 </div>
             </div>
             <div class="main-container">
-                <div>
-                    <a href="#/cards" class="main-card"> <img src="./src/img/draw.jpg" class="main-card__image"
-                            alt="Action (set A)"> Action (set A)</a>
-                </div>
-                <div class="card">
-                    <div class="front">
-                        <img class="card-img" src="./src/img/cry.jpg" alt="cry">
-                        <p class="card-name">cry</p>
-                    </div>
-                    <div class="back">
-                        <img class="card-img" src="./src/img/cry.jpg" alt="cry">
-                        <p class="card-name">плакать</p>
-                    </div>
-                    <div class="rotate"></div>
-                </div>
             </div>
         </div>
     </div>
-    <script src="./src/js/card.js" type="module"></script>
+    <script src="./src/js/app.js" type="module"></script>
 </body>
 
 </html>
