add: generate layout, animation burger, animation menu, function sound

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     </ul>
                 </nav>
                 <div class="onoffswitch">
-                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch"
+                        data-type="switcher">
                     <label class="onoffswitch-label" for="myonoffswitch">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
@@ -35,6 +36,10 @@
             </div>
             <div class="main-container">
             </div>
+            <div class="button-container">
+                <input type="submit" class="button" value="Star Game">
+            </div>
+            <audio class="audio" autoplay="autoplay"></audio>
         </div>
     </div>
     <script src="./src/js/app.js" type="module"></script>
