add: 2 categories, menu handler, refactoring code in container and header handler

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    
     <div class="root">
         <div class="app-container">
             <div class="container-header">
@@ -23,6 +24,8 @@
                         <a href="#/cards" class="menu-item">Animal (set B)</a>
                         <a href="#/cards" class="menu-item">Clothes</a>
                         <a href="#/cards" class="menu-item">Emotions</a>
+                        <a href="#/cards" class="menu-item">Sport</a>
+                        <a href="#/cards" class="menu-item">Food</a>
                     </ul>
                 </nav>
                 <div class="onoffswitch">
@@ -34,15 +37,11 @@
                     </label>
                 </div>
             </div>
-            <div class="main-container">
-            </div>
-            <div class="button-container">
-                <input type="submit" class="button" value="Star Game">
-            </div>
             <audio class="audio" autoplay="autoplay"></audio>
+            <audio class="audio-service" autoplay="autoplay"></audio>
+            <script src="./dist/bundle.js" type="module"></script>
         </div>
     </div>
-    <script src="./src/js/app.js" type="module"></script>
 </body>
 
 </html>
