--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -1,14 +1,11 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/style.css">
     <title>Document</title>
 </head>
-
 <body>
-    <script src="./dist/index.js"></script>
+    <p>the text</p>
+    <p class="sass">SASS TEXT</p>
 </body>
-
 </html>
