--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -1,11 +1,48 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <p>the text</p>
-    <p class="sass">SASS TEXT</p>
+    <div class="root">
+        <div class="header">
+            <h1 class="header__logo">MovieSearch</h1>
+        </div>
+        <div class="main">
+            <div class="search">
+                <form action="" class="search__form">
+                    <input type="text" class="search__input">
+                    <input type="button" class="search__button" value="Search">
+                </form>
+            </div>
+            <div class="slider">
+                <div class="film-page">
+                    <div class="poster">
+                        <img src="" alt="" srcset="">
+                    </div>
+                    <div class="title">
+                        <p></p>
+                    </div>
+                    <div class="rating">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="rs-school">
+                myRS
+                <img src="" alt="">
+            </div>
+            <div class="github">
+                myGh
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
