add:yandex translate api, render movie page function

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -18,27 +18,28 @@
                     <input type="button" class="search__button" value="Search">
                 </form>
             </div>
-            <div class="slider">
-                <div class="film-page">
-                    <div class="poster">
-                        <img src="" alt="" srcset="">
-                    </div>
-                    <div class="title">
-                        <p></p>
-                    </div>
-                    <div class="rating">
-                        <p></p>
-                    </div>
+            <!-- Slider main container -->
+            <div class="swiper-container">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+
                 </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
         </div>
         <div class="footer">
             <div class="rs-school">
-                myRS
+
                 <img src="" alt="">
             </div>
             <div class="github">
-                myGh
+
                 <img src="" alt="">
             </div>
         </div>
