add: html layouts, view render function

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -2,8 +2,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Fancy-weather</title>
 </head>
 <body>
+    <div class="root">
+        <div class="header">
+            <div class="settings">
+
+            </div>
+            <div class="search">
+                <input type="text" name="">
+                <input type="button" value="Search">
+            </div>
+        </div>
+        <div class="main-container">
+            <div class="weather-container">
+                <div class="weather-today">
+                    <div class="weather-today__time">
+
+                    </div>
+                    <div class="weather-today__info">
+
+                    </div>
+                </div>
+                <div class="weather-in-future">
+                    <div class="weather-in-future__one">
+
+                    </div>
+                    <div class="weather-in-future__two">
+
+                    </div>
+                    <div class="weather-in-future__three">
+
+                    </div>
+                </div>
+            </div>
+            <div class="map-container">
+                <div class="map-container__content">
+
+                </div>
+                <div class="map-content__coorditaions">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
