fix: change weather api

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -18,11 +18,26 @@
         <div class="main-container">
             <div class="weather-container">
                 <div class="weather-today">
-                    <div class="weather-today__time">
+                    <div class="weather-today__city">
 
                     </div>
+                    <div class="weather-today__date">
+                        <p class="date"></p>
+                        <p class="time"></p>
+                    </div>
                     <div class="weather-today__info">
+                        <div class="temperature">
 
+                        </div>
+                        <div class="additional-info">
+                            <div class="weather-img">
+
+                            </div>
+                            <p class="precipitation"></p>
+                            <p class="feel"></p>
+                            <p class="wind"></p>
+                            <p class="humidity"></p>
+                        </div>
                     </div>
                 </div>
                 <div class="weather-in-future">
