add: html-mapbox-layouy, map-box-component-js

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -7,7 +7,7 @@
     <title>Fancy-weather</title>
 </head>
 
-<body>
+<body class="background">
     <div class="root">
         <div class="header">
             <div class="settings">
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="map-container">
-                <div class="map-container__content">
+                <div id="map" class="map-container__content">
 
                 </div>
                 <div class="map-content__coorditaions">
