add: render function, search function

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -21,51 +21,11 @@
         <div class="main-container">
             <div class="weather-container">
                 <div class="weather-today-block">
-                    <div class="weather-today__city">
-                        KHOTKOVO, RUSSIA
-                    </div>
-                    <div class="weather-today__data">
-                        1 JUNE
-                    </div>
-                    <div class="weather-today__info">
-                        <div class="weather-today__temperature">
-                            11°
-                        </div>
-                        <img src="https://www.weatherbit.io/static/img/icons/c04d.png" class="weather-today__icon"
-                            alt="iconWeatherToday">
-                        <div class="weather-today__additional-info">
-                            <p class="temperature-property">OVERCAST</p>
-                            <p class="temperature-property">FEELS LIKE: +12°</p>
-                            <p class="temperature-property">WIND: 6 M/S</p>
-                            <p class="temperature-property">HUMIDITY: 66%</p>
-                        </div>
-                    </div>
+                    <div class="weather-today__city"></div>
+                    <div class="weather-today__data"></div>
+                    <div class="weather-today__info"></div>
                 </div>
                 <div class="weather-in-future">
-                    <div class="day-block">
-                        <div class="day">Thuesday</div>
-                        <div class="day-temperature">
-                            11°
-                        </div>
-                        <img src="https://www.weatherbit.io/static/img/icons/c04d.png" alt="weather-icon__future"
-                            alt="iconWeather">
-                    </div>
-                    <div class="day-block">
-                        <div class="day">Thuesday</div>
-                        <div class="day-temperature">
-                            11°
-                        </div>
-                        <img src="https://www.weatherbit.io/static/img/icons/c04d.png" alt="weather-icon__future"
-                            alt="iconWeather">
-                    </div>
-                    <div class="day-block">
-                        <div class="day">Thuesday</div>
-                        <div class="day-temperature">
-                            11°
-                        </div>
-                        <img src="https://www.weatherbit.io/static/img/icons/c04d.png" alt="weather-icon__future"
-                            alt="iconWeather">
-                    </div>
                 </div>
             </div>
             <div class="map-container">
@@ -73,7 +33,8 @@
 
                 </div>
                 <div class="map-content__coorditaions">
-
+                    <div class="latitude"></div>
+                    <div class="longitude"></div>
                 </div>
             </div>
         </div>
